--- a/coolpai.plist
+++ b/coolpai.plist
@@ -11,19 +11,19 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://192.168.1.11/test.ipa</string>
+                    <string>http://192.168.1.21/app/CoolPai.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.PocketElements.HuanShou</string>
+                <string>com.AmazingMasterpiece.DecoMoviesnew</string>
                 <key>bundle-version</key>
-                <string>4.4</string>
+                <string>1.5.4</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>test.ipa</string>
+                <string>CoolPai.ipa</string>
             </dict>
         </dict>
     </array>
