--- a/SideBarDemo.plist
+++ b/SideBarDemo.plist
@@ -11,13 +11,13 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://192.168.1.21/app/CoolPai.ipa</string>
+                    <string>https://raw.githubusercontent.com/doorxp/ipa/master/SideBarDemo.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.Timeslark.quicklyvideo</string>
+                <string>com.zx.TinyProjects</string>
                 <key>bundle-version</key>
                 <string>1.0</string>
                 <key>kind</key>
