--- a/MusicFM4.plist
+++ b/MusicFM4.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>MusicFM4.ipa</string>
+				<string>MusicFM4</string>
 			</dict>
 		</dict>
 	</array>
