--- a/MusicFM4.plist
+++ b/MusicFM4.plist
@@ -13,6 +13,14 @@
 					<key>url</key>
 					<string>http://192.168.1.36:7888/MusicFM4.ipa</string>
 				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>http://192.168.1.36:7888/iTunesArtwork.png</string>
+				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
