--- a/MusicFM4.plist
+++ b/MusicFM4.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://app.doorxp.com/ipa/MusicFM4.ipa</string>
+					<string>http://192.168.1.36/ipa/MusicFM4.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://app.doorxp.com/ipa/MusicFM4/AppIcon.png</string>
+					<string>http://192.168.1.36/ipa/MusicFM4/AppIcon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
